--- a/test-notebook.ipynb
+++ b/test-notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "test-notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/QFQJSA/JtJy/3m/rtItZ",
+      "authorship_tag": "ABX9TyMq+i1VbUPssvurBUbKnYhM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,7 @@
       },
       "outputs": [],
       "source": [
-        ""
+        "myvar = 9"
       ]
     }
   ]
